Get rid of ManagedServers and multiple MonitoredEndpoints
ManagedServer and its subclasses and MonitoredEndpoints and its
subclasses are all replaced by a EndpointConfiguration, ConnectionData
and a final MonitoredEndpoint.